<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ĐĂNG NHẬP"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="150dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginTop="15dp"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:drawableStart="@drawable/ic_email"
                android:minHeight="48dp"
                android:paddingEnd="10dp"
                android:textColor="#FD959090"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:drawableStart="@drawable/ic_lock"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="#FD959090"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signin_username">

                <TextView
                    android:id="@+id/tvChuaCoTaiKhoan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foregroundGravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/chua_co_tai_khoan"
                    android:textColor="#9B9B9B"
                    android:textSize="16sp"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signin_username" />

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dang_ky"
                    android:textColor="#2884FF"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/signin_username" />
            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="181dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#CF2127"
                android:layout_gravity="center"
                android:text="@string/dang_nhap"
                app:cornerRadius="18dp"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <View
            android:id="@+id/view2"
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="#9B9B9B"
            android:layout_gravity="center"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_gravity="center"
            android:textColor="#9B9B9B"
            android:textSize="16sp" />
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />
        <View
            android:id="@+id/view"
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"

            android:background="#9B9B9B"
            android:layout_gravity="center" />


    </LinearLayout>

            <Button
                android:id="@+id/signInGoogle"
                android:layout_width="369dp"
                android:layout_height="48dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:text="Tiếp tục với Google"
                android:drawableLeft="@drawable/google_icon"
                android:textAllCaps="false"
                android:textColor="#9B9B9B"
                android:textSize="16sp"
                app:cornerRadius="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout" />





</LinearLayout>