<?xml version="1.0" encoding="utf-8"?>


        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvDangKy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dang_ky"
                android:layout_marginTop="200sp"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginTop="30dp"
                android:hint="@string/email"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="#FD959090"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDangKy" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:hint="@string/password"
                android:paddingEnd="10dp"
                android:textColor="#FD959090"
                android:textSize="16sp"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtEmail" />


            <Button
                android:id="@+id/btnRegister"
                android:layout_width="181dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/dang_ky"
                android:textAllCaps="false"
                android:backgroundTint="#CF2127"
                app:cornerRadius="18dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnRegister">

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bạn đã có tài khoản?"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

                <TextView
                    android:id="@+id/loginText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dang_nhap"
                    android:textColor="#2884FF"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/textView26"
                    app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

