<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:gravity="center">

        <ImageView
            android:id="@+id/ivSeeLater"
            android:layout_width="43dp"
            android:layout_height="36dp"
            android:layout_gravity="start"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/save" />
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/tvRssReader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rss_reader"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />
        <ImageView
            android:id="@+id/imgLogout"
            android:layout_width="43dp"
            android:layout_height="36dp"
            android:layout_gravity="start"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/logout" />

    </LinearLayout>

    <Button
        android:id="@+id/fetchFeedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_marginTop="5sp"
        android:layout_alignParentEnd="true"
        app:cornerRadius="18sp"
        android:backgroundTint="#1660f5"
        android:text="@string/load"
        android:textAllCaps="false" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_toStartOf="@id/fetchFeedButton"
        android:hint="@string/rss_link"
        android:layout_below="@id/linearLayout">

        <EditText
            android:id="@+id/rssFeedEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:minHeight="43dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textInputLayout"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</RelativeLayout>